@@ -3,7 +3,8 @@ apply plugin:'application'
 
 mainClassName = "com.p14n.vertx.VertxRunner"
 
-project.ext.vertxVersion = "2.1M5"
+project.ext.vertxVersion = "2.1RC3"
+project.ext.slf4jVersion = "1.7.5"
 
 group = 'com.p14n'
 version = '0.0.1'
@@ -15,10 +16,25 @@ repositories {
     mavenCentral()
 }
 
+tasks.startScripts {
+  doLast {
+    def windowsScriptFile = file getWindowsScript()
+    def unixScriptFile    = file getUnixScript()
+    windowsScriptFile.text = windowsScriptFile.text.replace('CLASSPATH=%APP_HOME%', 'CLASSPATH=%SAVED%:%APP_HOME%')
+     .replace('DEFAULT_JVM_OPTS=','DEFAULT_JVM_OPTS="-XX:MaxPermSize=1G"')
+    unixScriptFile.text  = unixScriptFile.text.replace('CLASSPATH=$APP_HOME', 'CLASSPATH=$SAVED:$APP_HOME')
+     .replace('DEFAULT_JVM_OPTS=""','DEFAULT_JVM_OPTS="-XX:MaxPermSize=1G"')
+  }
+}
+
 dependencies {
 
     compile "io.vertx:vertx-core:$vertxVersion"
     compile "io.vertx:vertx-platform:$vertxVersion"
-    //compile "io.vertx:lang-clojure:1.0.0.Beta2"
+    compile "io.vertx:vertx-hazelcast:$vertxVersion"
+    compile "org.slf4j:slf4j-log4j12:$slf4jVersion"
+    compile "org.slf4j:jcl-over-slf4j:$slf4jVersion"
+    compile "org.slf4j:jul-to-slf4j:$slf4jVersion"
+    compile "log4j:apache-log4j-extras:1.2.17"
 
 }
